Update left-side structure

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="left-side">
         <div id="logo">
             <img src="images/odinlogo.png" alt="Odin project logo">
-            ODIN
+            <div id="logo-title">ODIN</div>
         </div>
-        <p>Photo by <a href="">Halie West</a> on <a href="">Unsplash</a></p>
+        <p id="left-footer">Photo by <a href="" class="left-footer-link">Halie West</a> on <a href="" class="left-footer-link">Unsplash</a></p>
     </div>
     <div id="right-side">
         <div id="section-1">
