Update html structure

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     </div>
     <div id="right-side">
         <div id="section-1">
-            <p>This is not a real online service! You know you need something like this in your life to help you realize your depest dreams.</p>
-            <p>You know you want to.</p>
+            <p id="section-1-toptext">This is not a real online service! You know you need something like this in your life to help you realize your depest dreams.</p>
+            <p id="section-1-bottomtext">You know you want to.</p>
         </div>
         <div id="section-2">
-            <p>Let's do this!</p>
+            <p id="form-text">Let's do this!</p>
             <form action="">
                 <div id="left-form">
                     <div>
                         <label for="first_name">FIRST NAME</label>
-                        <input type="text" id="first_name" name="first_name">
+                        <input type="text" id="first_name" name="first_name" class="invalid">
                     </div>
                     <div>
                         <label for="user_email">EMAIL</label>
@@ -55,7 +55,7 @@
         </div>
         <div id="section-3">
             <button type="submit">Create Account</button>
-            <p>Already have an account?<a href="">Log in</a></p>
+            <p id="form-footer">Already have an account?<a href="" id="form-link">Log in</a></p>
         </div>
     </div>
 </body>
