--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
             <form id="form">
                 <div id="left-form">
                     <div>
-                        <label for="first_name">FIRST NAME</label>
-                        <input type="text" id="first_name" name="first_name">
+                        <label for="first_name">FIRST NAME*</label>
+                        <input type="text" id="first_name" name="first_name" autofocus required>
                         <p class="error-text" id="first_name-error"></p>
                     </div>
                     <div>
-                        <label for="user_email">EMAIL</label>
-                        <input type="email" id="user_email" name="user_email">
+                        <label for="user_email">EMAIL*</label>
+                        <input type="email" id="user_email" name="user_email" required>
                         <p class="error-text" id="user_email-error"></p>
                     </div>
                     <div>
-                        <label for="password">PASSWORD</label>
-                        <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                        <label for="password">PASSWORD*</label>
+                        <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
                         <p class="error-text" id="password-error"></p>
                     </div>
                 </div>
                 <div id="right-form">
                     <div>
-                        <label for="last_name">LAST NAME</label>
-                        <input type="text" id="last_name" name="last_name">
+                        <label for="last_name">LAST NAME*</label>
+                        <input type="text" id="last_name" name="last_name" required>
                         <p class="error-text" id="last_name-error"></p>
                     </div>
                     <div>
@@ -53,8 +53,8 @@
                         <p class="error-text" id="phone_number-error"></p>
                     </div>
                     <div>
-                        <label for="confirm_password">CONFIRM PASSWORD</label>
-                        <input type="password" id="confirm_password" name="confirm_password">
+                        <label for="confirm_password">CONFIRM PASSWORD*</label>
+                        <input type="password" id="confirm_password" name="confirm_password" required>
                         <p class="error-text" id="confirm_password-error"></p>
                     </div>
                 </div>
