--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="left-form">
                     <div>
                         <label for="first_name">FIRST NAME*</label>
-                        <input type="text" id="first_name" name="first_name" autofocus required>
+                        <input type="text" id="first_name" name="first_name" required>
                         <p class="error-text" id="first_name-error"></p>
                     </div>
                     <div>
