Change phone number input type and add pattern

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div>
                         <label for="phone_number">PHONE NUMBER</label>
-                        <input type="number" id="phone_number" name="phone_number">
+                        <input type="text" id="phone_number" name="phone_number" pattern="[0-9]{10}">
                         <p class="error-text" id="phone_number-error"></p>
                     </div>
                     <div>
