--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div>
                         <label for="user_email">EMAIL*</label>
-                        <input type="email" id="user_email" name="user_email" required>
+                        <input type="email" id="user_email" name="user_email" pattern="\S*@\w*\.\w+(\.\w*)?" required>
                         <p class="error-text" id="user_email-error"></p>
                     </div>
                     <div>
