--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                     </div>
                     <div>
                         <label for="phone_number">PHONE NUMBER</label>
-                        <input type="text" id="phone_number" name="phone_number" pattern="[0-9]{10}">
+                        <input type="text" id="phone_number" name="phone_number" pattern="[0-9]{10}" placeholder="(Optional) E.g.07070657642">
                         <p class="error-text" id="phone_number-error"></p>
                     </div>
                     <div>
                         <label for="confirm_password">CONFIRM PASSWORD*</label>
-                        <input type="password" id="confirm_password" name="confirm_password" required>
+                        <input type="password" id="confirm_password" name="confirm_password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
                         <p class="error-text" id="confirm_password-error"></p>
                     </div>
                 </div>
