Render Odin Logo on github pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="left-side">
         <div id="logo">
-            <img src="images/odinLogo.png" alt="Odin project logo">
+            <img src="Images/odinLogo.png" alt="Odin project logo">
             <div id="logo-title">ODIN</div>
         </div>
         <p id="left-footer">Photo by <a href="" class="left-footer-link">Halie West</a> on <a href="" class="left-footer-link">Unsplash</a></p>
